[gd_scene load_steps=2 format=3 uid="uid://c8jx8jx8jx8jx8"]

[ext_resource type="Script" path="res://main.gd" id="1"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
text = "AlienFall - Phase 5: Battlescape Enhancement"
horizontal_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = 150.0
offset_right = 150.0
offset_bottom = -50.0
grow_vertical = 2
alignment = 1

[node name="EnhancedInventoryButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Enhanced Inventory Demo"

[node name="AlienAIDemoButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Alien AI Demo"

[node name="AlienAITestButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Alien AI Tests"

[node name="GeoscapeTestButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Geoscape Integration Test"

[node name="SimpleTestButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Simple Test"

[node name="TestMenuButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "TEST MENU (Debug)"

[node name="BattleDemoButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Battle Demo"

[node name="ExitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MenuContainer/EnhancedInventoryButton" to="." method="_on_enhanced_inventory_pressed"]
[connection signal="pressed" from="MenuContainer/AlienAIDemoButton" to="." method="_on_alien_ai_demo_pressed"]
[connection signal="pressed" from="MenuContainer/AlienAITestButton" to="." method="_on_alien_ai_test_pressed"]
[connection signal="pressed" from="MenuContainer/GeoscapeTestButton" to="." method="_on_geoscape_test_pressed"]
[connection signal="pressed" from="MenuContainer/SimpleTestButton" to="." method="_on_simple_test_pressed"]
[connection signal="pressed" from="MenuContainer/TestMenuButton" to="." method="_on_test_menu_pressed"]
[connection signal="pressed" from="MenuContainer/BattleDemoButton" to="." method="_on_battle_demo_pressed"]
[connection signal="pressed" from="MenuContainer/ExitButton" to="." method="_on_exit_pressed"]
